...
    final screenWidth = MediaQuery.of(context).size.width;

    return Scaffold(
      appBar: AppBar(
        backgroundColor: ProjectColors.headerColor,
        title: const Text(
          'Match info',
          style: CustomTextStyles.header,
        ),
      ),
      body: BlocBuilder<MatchDetailCubit, MatchDetailState>(
          builder: (context, state) {
        if (state is MatchDetailLoading) {
...
